--- a/nginx.conf
+++ b/nginx.conf
@@ -21,7 +21,8 @@ http {
         underscores_in_headers on;
         location / {
             proxy_pass_header Authorization;
-            proxy_pass http://$upstream;
+            #proxy_pass http://$upstream;
+            proxy_pass https://chatwoot-web.srv01.funnelhost.com.br/
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
             proxy_set_header Host $host;
