--- a/nginx.conf
+++ b/nginx.conf
@@ -22,7 +22,7 @@ http {
         location / {
             proxy_pass_header Authorization;
             #proxy_pass http://$upstream;
-            proxy_pass http://chatwoot-web.srv01.funnelhost.com.br
+            proxy_pass http://chatwoot-web.srv01.funnelhost.com.br;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
             proxy_set_header Host $host;
