--- a/nginx.conf
+++ b/nginx.conf
@@ -13,6 +13,7 @@ http {
         # server_name <yourdomain.com>;
 
         # Point upstream to Chatwoot App Server
+        #set $upstream chatwoot-web.srv01.funnelhost.com.br;
         set $upstream 10.0.1.151:3000;
 
         # Nginx strips out underscore in headers by default
@@ -21,8 +22,8 @@ http {
         underscores_in_headers on;
         location / {
             proxy_pass_header Authorization;
-            #proxy_pass http://$upstream;
-            proxy_pass http://chatwoot-web.srv01.funnelhost.com.br;
+            proxy_pass http://$upstream;
+            #proxy_pass http://chatwoot-web.srv01.funnelhost.com.br;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
             proxy_set_header Host $host;
